@@ -8,6 +8,8 @@
         <param name="publish_markers" value="true" type="bool"/>
         
         <param name="edge_inverse_depth_var_accept" value="0.02" type="double"/>
+        <param name="klt_max_level" value="3" type="int"/>
+        <param name="klt_min_level" value="1" type="int"/>
 
         <!-- Camera calibration file -->
         <rosparam file="$(find svo_ros)/param/120_atan_8.yaml" />
